--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <button class="buttonOffPreloader" type="button">Перейти к сайту</button>
-  </div> 
+  </div>
   <header class="header">
     <div class="container">
       <button class="burger-button" data-js-burger-button>
@@ -77,14 +77,14 @@
       </div>
     </div>
   </div>
-  <div class="container">
+  <!-- <div class="container">
       <div class="main__about-games">
         <div class="main__about-gameOne">
           <div class="main__about-gameOne-text"></div>
           <div class="main__about-gameOne-slider"></div>
         </div>
       </div>
-      </div>
+      </div> -->
   </main>
   <footer class="footer">
     
